# fileWatcher

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: ccpp.yml
include/: exeWatcher.hpp  fileWatcher.hpp  fileWatcherSync.hpp  mousePluginWatcher.hpp
src/: exeWatcher.cpp  fileWatcher.cpp
test/: example.cpp  example_exeWatcher.cpp  example_fileWatcher.cpp
test/test_case/: test_fileWatcher.cpp  test_fileWatcherSync.cpp
